--- a/AUTHORS
+++ b/AUTHORS
@@ -9,12 +9,14 @@
 # See python fnmatch module documentation for more information.
 
 Anton Zub <azb.0x7dc@gmail.com>
+Kris Selden <kris.selden@gmail.com>
 Maciek Weksej <maciek.weksej@gmail.com>
 Magda Zawora <magda.zawora@gmail.com>
 Martijn Croonen <martijn@martijnc.be>
 Mathieu Laprise <mathlaprise@gmail.com>
 Sylvester Willis <sylvester.lee.willis@gmail.com>
 Wang Qing <wangqing-hf@loongson.cn>
+Yuzhao Zhang <yuzhao.zhang@intel.com>
 
 The Chromium Authors <*@chromium.org>
 Google Inc. <*@google.com>
